# nedolib-backend

./: .env.example  .gitignore  Cargo.toml  diesel.toml  rustfmt.toml
migrations/2024-06-24-133559_users/: down.sql  up.sql
migrations/2024-06-24-134514_sessions/: down.sql  up.sql
migrations/2024-06-26-074734_translators/: down.sql  up.sql
migrations/2024-06-26-074737_admins/: down.sql  up.sql
migrations/2024-06-26-080405_profiles/: down.sql  up.sql
migrations/2024-06-26-081959_authors/: down.sql  up.sql
migrations/2024-06-26-082455_artists/: down.sql  up.sql
migrations/2024-06-26-092715_translators_in_teams/: down.sql  up.sql
migrations/2024-06-26-093351_titles/: down.sql  up.sql
migrations/2024-06-26-095521_titles_and_teams/: down.sql  up.sql
migrations/2024-06-27-171111_volumes/: down.sql  up.sql
migrations/2024-06-27-171527_chapters/: down.sql  up.sql
migrations/2024-06-27-171922_pages/: down.sql  up.sql
migrations/2024-06-27-172308_comments/: down.sql  up.sql
migrations/2024-06-27-173039_reviews/: down.sql  up.sql
migrations/2024-06-27-173626_respects/: down.sql  up.sql
migrations/2024-06-27-174616_sessions_add_device/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/database/: mod.rs
src/routes/: mod.rs
src/routes/user/: mod.rs  user.rs
