[package]
name = "nedolib-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.8.0" }
diesel = { version = "2.2.1", features = [
	"postgres",
	"chrono",
	"r2d2",
	"uuid",
] }

uuid = { version = "1.9.1" }
chrono = { version = "0.4.38" }

dotenvy = { version = "0.15.7" }
env_logger = { version = "0.11.3" }
log = { version = "0.4.21" }
